# mental-model-mapper

./: LICENSE  README.md  pyproject.toml
app/: main.py
src/mental_model_mapper/parser/: cleaners.py  models.py
src/mental_model_mapper/parser/loaders/: base.py
